test/fail_compilation/imports/test314b.d
private import io = std.stdio;
